Fix Safari layout bug

--- a/css/initial.css
+++ b/css/initial.css
@@ -1074,6 +1074,11 @@ section.level1:nth-of-type(n+4) {
     position: relative;
     line-height: 1;
 }
+/*	Extra-special styles for extra-special browsers (Safari).
+ */
+_::-webkit-full-page-media, _:future, :root .heading {
+	display: block;
+}
 @media all and (min-width: 1180px) {
     .heading {
         margin-left: calc(-1 * var(--base-font-size));
